--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,10 @@ body, input[text], button {
 * {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.error {color:red;}
+button.delete-button{
+    float:right;
+    background-color: gray !important;
+    color:white;
+}
